--- a/help/en_US/scilab_en_US_help/qpipopt.html
+++ b/help/en_US/scilab_en_US_help/qpipopt.html
@@ -44,31 +44,31 @@
 
 <div class="refsection"><h3 class="title">Parameters</h3>
    <dl><dt><span class="term">nbVar :</span>
-      <dd><p class="para">a 1 x 1 matrix of doubles, number of variables</p></dd></dt>
+      <dd><p class="para">a double, number of variables</p></dd></dt>
    <dt><span class="term">nbCon :</span>
-      <dd><p class="para">a 1 x 1 matrix of doubles, number of constraints</p></dd></dt>
+      <dd><p class="para">a double, number of constraints</p></dd></dt>
    <dt><span class="term">Q :</span>
-      <dd><p class="para">a n x n symmetric matrix of doubles, where n is number of variables, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
+      <dd><p class="para">a symmetric matrix of doubles, represents coefficients of quadratic in the quadratic problem.</p></dd></dt>
    <dt><span class="term">p :</span>
-      <dd><p class="para">a n x 1 matrix of doubles, where n is number of variables, represents coefficients of linear in the quadratic problem</p></dd></dt>
+      <dd><p class="para">a vector of doubles, represents coefficients of linear in the quadratic problem</p></dd></dt>
    <dt><span class="term">LB :</span>
-      <dd><p class="para">a n x 1 matrix of doubles, where n is number of variables, contains lower bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains lower bounds of the variables.</p></dd></dt>
    <dt><span class="term">UB :</span>
-      <dd><p class="para">a n x 1 matrix of doubles, where n is number of variables, contains upper bounds of the variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, where n is number of variables, contains upper bounds of the variables.</p></dd></dt>
    <dt><span class="term">conMatrix :</span>
-      <dd><p class="para">a m x n matrix of doubles, where n is number of variables and m is number of constraints, contains  matrix representing the constraint matrix</p></dd></dt>
+      <dd><p class="para">a matrix of doubles, contains  matrix representing the constraint matrix</p></dd></dt>
    <dt><span class="term">conLB :</span>
-      <dd><p class="para">a m x 1 matrix of doubles, where m is number of constraints, contains lower bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains lower bounds of the constraints.</p></dd></dt>
    <dt><span class="term">conUB :</span>
-      <dd><p class="para">a m x 1 matrix of doubles, where m is number of constraints, contains upper bounds of the constraints.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains upper bounds of the constraints.</p></dd></dt>
    <dt><span class="term">x0 :</span>
-      <dd><p class="para">a m x 1 matrix of doubles, where m is number of constraints, contains initial guess of variables.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
       <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
-      <dd><p class="para">a 1xn matrix of doubles, the computed solution of the optimization problem.</p></dd></dt>
+      <dd><p class="para">a vector of doubles, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">fopt :</span>
-      <dd><p class="para">a 1x1 matrix of doubles, the function value at x.</p></dd></dt>
+      <dd><p class="para">a double, the function value at x.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
       <dd><p class="para">Integer identifying the reason the algorithm terminated.</p></dd></dt>
    <dt><span class="term">output :</span>
