--- a/help/en_US/scilab_en_US_help/qpipoptmat.html
+++ b/help/en_US/scilab_en_US_help/qpipoptmat.html
@@ -65,24 +65,43 @@
    <dt><span class="term">x0 :</span>
       <dd><p class="para">a vector of double, contains initial guess of variables.</p></dd></dt>
    <dt><span class="term">param :</span>
-      <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
+      <dd><p class="para">a list containing the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
       <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">fopt :</span>
-      <dd><p class="para">a double, the function value at x.</p></dd></dt>
+      <dd><p class="para">a double, the value of the function at x.</p></dd></dt>
    <dt><span class="term">residual :</span>
       <dd><p class="para">a vector of double, solution residuals returned as the vector d-C*x.</p></dd></dt>
    <dt><span class="term">exitflag :</span>
-      <dd><p class="para">A flag showing returned exit flag from Ipopt. It could be 0, 1 or 2 etc. i.e. Optimal, Maximum Number of Iterations Exceeded, CPU time exceeded. Other flags one can see in the lsqlin macro.</p></dd></dt>
+      <dd><p class="para">The exit status. See below for details.</p></dd></dt>
    <dt><span class="term">output :</span>
-      <dd><p class="para">Structure containing information about the optimization. This version only contains number of iterations.</p></dd></dt>
+      <dd><p class="para">The structure consist of statistics about the optimization. See below for details.</p></dd></dt>
    <dt><span class="term">lambda :</span>
-      <dd><p class="para">Structure containing the Lagrange multipliers at the solution x (separated by constraint type).It contains lower, upper bound multiplier and linear equality, inequality constraint multiplier.</p></dd></dt></dl></div>
+      <dd><p class="para">The structure consist of the Lagrange multipliers at the solution of problem. See below for details.</p></dd></dt></dl></div>
 
 <div class="refsection"><h3 class="title">Description</h3>
    <p class="para">Search the minimum of a constrained linear quadratic optimization problem specified by :</p>
    <p class="para"><span><img src='./_LaTeX_qpipoptmat.xml_1.png' style='position:relative;top:41px;width:277px;height:90px'/></span></p>
    <p class="para">The routine calls Ipopt for solving the quadratic problem, Ipopt is a library written in C++.</p>
+   <p class="para">The exitflag allows to know the status of the optimization which is given back by Ipopt.
+<ul class="itemizedlist"><li>exitflag=0 : Optimal Solution Found</li>
+<li>exitflag=1 : Maximum Number of Iterations Exceeded. Output may not be optimal.</li>
+<li>exitflag=2 : Maximum CPU Time exceeded. Output may not be optimal.</li>
+<li>exitflag=3 : Stop at Tiny Step.</li>
+<li>exitflag=4 : Solved To Acceptable Level.</li>
+<li>exitflag=5 : Converged to a point of local infeasibility.</li></ul></p>
+   <p class="para">For more details on exitflag see the ipopt documentation, go to http://www.coin-or.org/Ipopt/documentation/</p>
+   <p class="para">The output data structure contains detailed informations about the optimization process.
+It has type &#0034;struct&#0034; and contains the following fields.
+<ul class="itemizedlist"><li>output.iterations: The number of iterations performed during the search</li>
+<li>output.constrviolation: The max-norm of the constraint violation.</li></ul></p>
+   <p class="para">The lambda data structure contains the Lagrange multipliers at the end
+of optimization. In the current version the values are returned only when the the solution is optimal.
+It has type &#0034;struct&#0034; and contains the following fields.
+<ul class="itemizedlist"><li>lambda.lower: The Lagrange multipliers for the lower bound constraints.</li>
+<li>lambda.upper: The Lagrange multipliers for the upper bound constraints.</li>
+<li>lambda.eqlin: The Lagrange multipliers for the linear equality constraints.</li>
+<li>lambda.ineqlin: The Lagrange multipliers for the linear inequality constraints.</li></ul></p>
    <p class="para"></p></div>
 
 <div class="refsection"><h3 class="title">Examples</h3>
