--- a/help/en_US/scilab_en_US_help/symphony.html
+++ b/help/en_US/scilab_en_US_help/symphony.html
@@ -64,20 +64,29 @@
    <dt><span class="term">objSense :</span>
       <dd><p class="para">The sense (maximization/minimization) of the objective. Use 1(sym_minimize ) or -1 (sym_maximize) here.</p></dd></dt>
    <dt><span class="term">options :</span>
-      <dd><p class="para">a list containing the the parameters to be set.</p></dd></dt>
+      <dd><p class="para">a list containing the parameters to be set.</p></dd></dt>
    <dt><span class="term">xopt :</span>
       <dd><p class="para">a vector of double, the computed solution of the optimization problem.</p></dd></dt>
    <dt><span class="term">fopt :</span>
-      <dd><p class="para">a double, the function value at x.</p></dd></dt>
+      <dd><p class="para">a double, the value of the function at x.</p></dd></dt>
    <dt><span class="term">status :</span>
-      <dd><p class="para">status flag returned from symphony. 227 is optimal, 228 is Time limit exceeded, 230 is iteration limit exceeded.</p></dd></dt>
+      <dd><p class="para">status flag returned from symphony.See below for details.</p></dd></dt>
    <dt><span class="term">output :</span>
-      <dd><p class="para">The output data structure contains detailed information about the optimization process. This version only contains number of iterations</p></dd></dt></dl></div>
+      <dd><p class="para">The output data structure contains detailed information about the optimization process. See below for details.</p></dd></dt></dl></div>
 
 <div class="refsection"><h3 class="title">Description</h3>
    <p class="para">Search the minimum or maximum of a constrained mixed integer linear programming optimization problem specified by :</p>
    <p class="para"><span><img src='./_LaTeX_symphony.xml_1.png' style='position:relative;top:41px;width:292px;height:90px'/></span></p>
    <p class="para">The routine calls SYMPHONY written in C by gateway files for the actual computation.</p>
+   <p class="para">The status allows to know the status of the optimization which is given back by Ipopt.
+<ul class="itemizedlist"><li>status=227 : Optimal Solution Found</li>
+<li>status=228 : Maximum CPU Time exceeded.</li>
+<li>status=229 : Maximum Number of Node Limit Exceeded.</li>
+<li>status=230 : Maximum Number of Iterations Limit Exceeded.</li></ul></p>
+   <p class="para">For more details on status see the symphony documentation, go to http://www.coin-or.org/SYMPHONY/man-5.6/</p>
+   <p class="para">The output data structure contains detailed informations about the optimization process.
+It has type &#0034;struct&#0034; and contains the following fields.
+<ul class="itemizedlist"><li>output.iterations: The number of iterations performed during the search</li></ul></p>
    <p class="para"></p></div>
 
 <div class="refsection"><h3 class="title">Examples</h3>
